--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -11,3 +11,80 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.navigation {
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sidebar {
+  background-color: white;
+  box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.1);
+  height: 100vh;
+  position: fixed;
+  width: 300px;
+  top: 0;
+  padding-top: 5rem;
+}
+
+.logo {
+  max-width: 150px !important;
+}
+
+.dashboardContent {
+  padding-top: 5rem;
+}
+
+.loginBg {
+  background-color: #eee;
+  width: 100%;
+  height: 100vh;
+}
+
+.title {
+  margin: 1rem 0;
+  border-bottom: 1px solid #ccc;
+}
+
+.dashboardCardHeader ul {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+
+.dashboardCardHeader ul li {
+  color: var(--dark);
+  font-weight: 600;
+}
+
+.dashboardCardHeader ul li svg {
+  color: white;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+.dashboardCardIcon {
+  background-color: var(--dark);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+}
+
+.dashboardCard {
+  border-radius: 28px;
+  background-color: #eee;
+  padding: 1.5rem 2rem;
+  margin-bottom: 1.5rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
