--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -24,7 +24,7 @@ code {
   box-shadow: 0px 0px 24px rgba(0, 0, 0, 0.1);
   height: 100vh;
   position: fixed;
-  width: 300px;
+  width: 15%;
   top: 0;
   padding-top: 5rem;
 }
